<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_covid">

    <fragment
        android:id="@+id/nav_covid"
        android:name="com.gac5206.covidawareness.covid.CovidFragment"
        android:label="@string/covid"
        tools:layout="@layout/fragment_covid"
        >
        <action
            android:id="@+id/action_nav_covid_to_nav_user_info"
            app:destination="@id/nav_user_info" />
        <action
            android:id="@+id/action_nav_covid_to_nav_maps"
            app:destination="@id/nav_maps" />
    </fragment>

    <activity
        android:id="@+id/nav_news"
        android:name="com.gac5206.covidawareness.news.activities.NewsActivity"
        android:label="@string/news"
        tools:layout="@layout/activity_news" />


    <fragment
        android:id="@+id/nav_maps"
        android:name="com.gac5206.covidawareness.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps"
        >
        <action
            android:id="@+id/action_nav_maps_to_nav_covid"
            app:destination="@id/nav_covid" />
    </fragment>
    <fragment
        android:id="@+id/nav_user_info"
        android:name="com.gac5206.covidawareness.UserInfoFragment"
        android:label="@string/user_info"
        tools:layout="@layout/fragment_user_info"
        >
        <action
            android:id="@+id/action_nav_user_info_to_nav_covid"
            app:destination="@id/nav_covid" />
    </fragment>

</navigation>