<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserInfoFragment"
    android:background="@drawable/gradient_background">



    <TextView
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:gravity="center"
        android:text= "@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user_title"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/vaccination_card"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <Button
                android:id="@+id/upload_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_baseline_file_upload_24"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:elevation="2dp"
                />
        </LinearLayout>


        <ImageView
            android:id="@+id/vac_card_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>





    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
